# goit-web-hw-02

./: .gitignore  Dockerfile  pyproject.toml
app/: UI.py  addressbook.py  commands.py  errors.py  fields.py  main.py  record.py
