[tool.poetry]
name = "goit-web-hw-02"
version = "0.1.0"
description = ""
authors = ["ink404dot <94466285+ink404dot@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
